Bug 168559 - PPTX filter: interactive edit of bullets is broken after load + save
Summary: PPTX filter: interactive edit of bullets is broken after load + save
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: PPTX-Paragraph
  Show dependency treegraph
 
Reported: 2025-09-26 13:10 UTC by Miklos Vajna
Modified: 2025-11-14 02:15 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (17.05 KB, application/vnd.oasis.opendocument.presentation)
2025-09-26 13:10 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-09-26 13:10:24 UTC
Created attachment 202974 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached ODP bugdoc
2) Save to PPTX
3) Open the just created PPTX
4) Go to the only slide in the document, go to the end of the first bullet in the outline shape, enter, tab.

Expected result: indent grows to match the other "level 2" bullet, from 0.12" 0.59".

Actual result: indent grows to 1.10″, i.e. the resulting indent is too large.
Comment 1 Commit Notification 2025-09-26 14:15:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4d45c41ce5b9711934d79ca3c5618d13d7c0bcf

tdf#168559 PPTX exp: fix missing non-first level list style for outline shapes

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-10-10 14:31:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/92f97778b87348b0b82c0497c4daee077005cbd1

tdf#168559 PPTX imp: fix missing custom level list style for outline shapes

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-10-13 12:25:32 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5b8c4db77397bc0017cc9b8c19bee6441214f8f1

tdf#168559 PPTX imp: fix missing list style for outline shapes on master pages

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.