tdf#168559 PPTX exp: fix missing non-first level list style for outline shapes

Export the bugdoc to PPTX, open in PowerPoint, go to the first slide, go
to the end of the first bullet, enter, tab, indent grows to a large
value, while it should only grow to match the existing other already
indented bullet.

It seems this happens because these indents are defined in the "list
style" of the shape, where we wrote the paragraph properties only for
the first level, see commit 0f9dc676eefce79ea63218edd910af486a09a52b
(tdf#59323: pptx export: add initial support for lstStyles in textboxes,
2021-06-16).

Fix the problem by writing paragraph properties for all list levels that
the outliner shape stores: Impress has 7 levels and PowerPoint has
markup for 9 levels, so in practice this can be mapped without problems.

A further improvement would be to make sure the outline shape on the
normal page and the master page is associated correctly, and then it
would not be necessary to repeat the formatting for shapes on the normal
slide. Similarly, the PPTX import still needs to parse this list style
of the shape, which is not yet done here, so the editing in PowerPoint
is now correct, but not in Impress.

Change-Id: I1aecb3c062ccbe5014d322d0561f0d2ff50ac698
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191544
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins